Fixed some layout bugs

--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,8 @@ header {
 header > h1 {
   Color: var(--text);
   font-family: WaltographUI, serif;
+  font-size: x-large;
+  padding-top: 11px;
 }
 
 header > i {
@@ -83,6 +85,7 @@ header > i {
   z-index: 1;
   margin-top: 100px;
   margin-bottom: 15px;
+  max-width: 400px;
 }
 
 .tile-wrapper > ul {
@@ -173,7 +176,7 @@ footer {
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 381px;
+  height: 450px;
   background-size: cover;
   background: linear-gradient(to top, rgba(255, 255, 255, 0) 20%,
   var(--body)), url("/images/background-light.png");
